Change ContentSettingImageView activation to key release

And standardize all BubbleIconViews as well: instead of activating on key down, activate on key up. This matches buttons (such as the toolbar buttons) and the ev cert icon.

Showing the bubble on key down means that the key up activates the newly-focused
"done" button.

BUG=602183

Review URL: https://codereview.chromium.org/1886943002

Cr-Commit-Position: refs/heads/master@{#389406}

Former-commit-id: ad2c35565eebbe4318c7a2ed950200b63599edf0