chrome/browser/ui/views/location_bar/content_setting_image_view.h
@@ -66,7 +66,6 @@ class ContentSettingImageView : public IconLabelBubbleView,
   void OnBoundsChanged(const gfx::Rect& previous_bounds) override;
   bool OnMousePressed(const ui::MouseEvent& event) override;
   void OnMouseReleased(const ui::MouseEvent& event) override;
-  bool OnKeyPressed(const ui::KeyEvent& event) override;
   void OnGestureEvent(ui::GestureEvent* event) override;
   void OnNativeThemeChanged(const ui::NativeTheme* native_theme) override;
   SkColor GetTextColor() const override;
@@ -74,6 +73,7 @@ class ContentSettingImageView : public IconLabelBubbleView,
   bool ShouldShowBackground() const override;
   double WidthMultiplier() const override;
   bool IsShrinking() const override;
+  bool OnActivate() override;
 
   // gfx::AnimationDelegate:
   void AnimationEnded(const gfx::Animation* animation) override;
@@ -83,10 +83,6 @@ class ContentSettingImageView : public IconLabelBubbleView,
   // views::WidgetObserver:
   void OnWidgetDestroying(views::Widget* widget) override;
   void OnWidgetVisibilityChanged(views::Widget* widget, bool visible) override;
-
-  // Called when the user clicks the view; this freezes the animation or snaps
-  // it to its end state as necessary and then opens a content setting bubble.
-  void OnClick();
 
   // Updates the image and tooltip to match the current model state.
   void UpdateImage();
