chrome/browser/ui/views/location_bar/icon_label_bubble_view.cc
@@ -119,9 +119,19 @@ bool IconLabelBubbleView::IsShrinking() const {
   return false;
 }
 
+bool IconLabelBubbleView::OnActivate() {
+  return false;
+}
+
 gfx::Size IconLabelBubbleView::GetPreferredSize() const {
   // Height will be ignored by the LocationBarView.
   return GetSizeForLabelWidth(label_->GetPreferredSize().width());
+}
+
+bool IconLabelBubbleView::OnKeyReleased(const ui::KeyEvent& event) {
+  if (event.key_code() != ui::VKEY_RETURN && event.key_code() != ui::VKEY_SPACE)
+    return false;
+  return OnActivate();
 }
 
 void IconLabelBubbleView::Layout() {
